--- a/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -120,7 +120,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Properties\PublishProfiles\JimiSportsStore - Web Deploy.pubxml" />
-    <Content Include="Scripts\1.9.1js" />
+    <Content Include="Scripts\1.9.1.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\1.3.2.js" />
     <Content Include="Scripts\bootstrap.js" />
