Made Changes to the IProductsReposistory, EFProductReposistory, and Product.cs. Added AdminTest with many administrative changes tested. Added Admin Controller and 2 views (Index & Edit) tied to it. Changed the connection string to a new connection string to make administrative changes. To Initiate the new database I used test data in queries from this project.

--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
 
-    <add name="EFDbContext" connectionString="Data Source=mssasan5dbserver.database.windows.net;         Initial Catalog=MssaSan5Db;User ID=MssaSan5Admin;Password=MssaSan5Pass;" providerName="System.Data.SqlClient" />
+    <add name="EFDbContext" connectionString="Data Source=claudiasmiles.database.windows.net;         Initial Catalog=jimisportstore;User ID=csAdmin;Password=Catdog0409993;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
